--- a/index.css
+++ b/index.css
@@ -234,13 +234,13 @@ main {
 
 .main__botton__p {
     padding-top: 10px;
+    color: #8F95A5;
 }
 
 .main__botton__button {
     padding-top: 20px;
 }
 
-.main__botton__text {}
 
 .main__smoll__button {
     width: 200px;
